<resources>
    <string name="app_name">원신 데일리</string>
    <string name="banner_ad_unit_id">ca-app-pub-2985851452464131/1150594635</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admob_app_id">ca-app-pub-2985851452464131~9220656349</string>
    <string name="day">요일입니다.</string>
    <string name="day_change_time">(한국시간 새벽5시 날짜 변경)</string>
    <string name="GMT">GMT+4</string>
    <string name="day_sun">일</string>
    <string name="day_mon">월</string>
    <string name="day_tue">화</string>
    <string name="day_wed">수</string>
    <string name="day_thu">목</string>
    <string name="day_fri">금</string>
    <string name="day_sat">토</string>
    <string name="daily_illganChecklist">일간 체크리스트</string>
    <string name="daily_illganQuest">일간퀘스트</string>
    <string name="daily_resin">레진</string>
    <string name="daily_artifact">성유물 파밍</string>
    <string name="daily_charTalent">캐릭터 특성 레벨업</string>
    <string name="daily_charAscend">캐릭터 돌파</string>
    <string name="daily_battlepass">일간 기행</string>
    <string name="daily_enemies">몬스터 토벌</string>
    <string name="weekly_checlist">주간 체크리스트</string>
    <string name="weekly_andrius">안드리우스</string>
    <string name="weekly_dvalin">드발린</string>
    <string name="weekly_tartaglia">타르탈리아</string>
    <string name="weekly_azhdaha">야타 용왕</string>
    <string name="weekly_signora">시뇨라</string>
    <string name="weekly_battlepass">주간 기행</string>
    <string name="weekly_reputation">주간 평판</string>
    <string name="today_talent_available">오늘의 특성 레벨업 가능 캐릭터</string>
    <string name="today_weapon_availabe">오늘의 레벨업 가능 무기</string>
    <string name="resin_alarm">레진 알리미</string>
    <string name="twentyfour_hours">(24시간 기준)</string>
    <string name="resin_si">시</string>
    <string name="resin_boon">분</string>
    <string name="resin_regenerate_complete">에 완충됩니다!</string>
    <string name="resin_calculate_time_button">완충시간 계산</string>
    <string name="alarm_switch">알람</string>
    <string name="materials_alarm">리젠 완료 알람</string>
    <string name="Forge_materials">단조 재료</string>
    <string name="iron_chunk">철광</string>
    <string name="white_iron_chunk">백철</string>
    <string name="starsilver">성은 광석</string>
    <string name="electro_crystal">전기 수정</string>
    <string name="crystal_chunk">수정덩이</string>
    <string name="Specialties_Mondstadt">특산물 - 몬드</string>
    <string name="wolfhook">고리고리 열매</string>
    <string name="valberry">낙락베리</string>
    <string name="small_lamp_grass">등불꽃</string>
    <string name="dandelion_seed">민들레 씨앗</string>
    <string name="philanemo_mushroom">바람버섯</string>
    <string name="cecilia">세실리아꽃</string>
    <string name="calla_lily">통통연꽃</string>
    <string name="windwheel_aster">풍차국화</string>
    <string name="specialties_liyue">특산물 - 리월</string>
    <string name="cor_lapis">콜 라피스</string>
    <string name="noctilucous">야박석</string>
    <string name="jueyun">절운고추</string>
    <string name="violetgrass">유리주머니</string>
    <string name="qingxin">청심</string>
    <string name="silk_flower">예상꽃</string>
    <string name="glaze_lily">유리백합</string>
    <string name="specialties_inazuma">특산물 - 이나즈마</string>
    <string name="ghost_pungdeng">귀신 풍뎅이</string>
    <string name="cherry_blossom">벚꽃 수구</string>
    <string name="crystal_golsu">수정 골수</string>
    <string name="hyulgok">혈곡</string>
    <string name="yulimple">울림풀</string>
    <string name="sea_bulocho">바다 불로초</string>
    <string name="sanho_pearl">산호 진주</string>
    <string name="amakumocho">아마쿠모초 열매</string>
    <string name="alarm_toast">알림을 켰습니다.\n(스위치를 켠 상태로 계산버튼을 체크해야\n 알람이 작동됩니다.)</string>
    <string name="resin_alarm_off">알람을 껐습니다.</string>
    <string name="resin_alarm_activated">레진 알람이 설정되었습니다.</string>
    <string name="farming_switch">알림을 켰습니다.\n(스위치를 켠 상태로 목록을 체크해야\n 알람이 작동됩니다.)</string>
    <string name="aquila_favonia">매의 검</string>
    <string name="skyward_blade">천공의 검</string>
    <string name="summit_shaper">참봉의 칼날</string>
    <string name="primordial_jade_cutter">반암결록</string>
    <string name="the_flute">피리검</string>
    <string name="iron_sting">강철 벌침</string>
    <string name="prototype_rancour">참암 프로토타입</string>
    <string name="the_black_sword">칠흑검</string>
    <string name="royal_longsword">왕실의 장검</string>
    <string name="lions_roar">용의 포효</string>
    <string name="sacrificial_sword">제례검</string>
    <string name="blackcliff_longsword">흑암 장검</string>
    <string name="sword_of_descension">강림의 검</string>
    <string name="festering_desire">부식의 검</string>
    <string name="fillet_blade">흘호 생선회칼</string>
    <string name="harbinger_of_dawn">여명신검</string>
    <string name="cool_steel">차가운 칼날</string>
    <string name="skyrider_sword">비천어검</string>
    <string name="travelers_handy_sword">여행자의 검</string>
    <string name="dark_iron_sword">암철검</string>
    <string name="favonius_sword">페보니우스 검</string>
    <string name="the_alley_flash">뒷골목의 섬광</string>
    <string name="freedom_sworn">오래된 자유의 서약</string>
    <string name="mistsplitter_reforged">안개를 가르는 회광</string>
    <string name="amenoma_kageuta_blade">아메노마 카게우치가타나</string>
    <string name="skyward_pride">천공의 긍지</string>
    <string name="wolfs_gravestone">늑대의 말로</string>
    <string name="the_unforged">무공의 검</string>
    <string name="favonius_greatsword">페보니우스 대검</string>
    <string name="serpent_spine">이무기 검</string>
    <string name="prototype_archaic">고화 프로토타입</string>
    <string name="whiteblind">백영검</string>
    <string name="royal_greatsword">왕실의 대검</string>
    <string name="the_bell">시간의 검</string>
    <string name="blackcliff_slasher">흑암참도</string>
    <string name="rainslasher">빗물 베기</string>
    <string name="sacrificial_greatsword">제례 대검</string>
    <string name="snow_tombed_starsilver">설장의 성은</string>
    <string name="skyrider_greatsword">비천대어검</string>
    <string name="debate_club">훌륭한 대화수단</string>
    <string name="white_iron_greatsword">백철 대검</string>
    <string name="bloodtainted_greatsword">드래곤 블러드 소드</string>
    <string name="ferrous_shadow">강철의 그림자</string>
    <string name="lithic_blade">천암 고검</string>
    <string name="song_of_broken_pines">송뢰가 울릴 무렵</string>
    <string name="katsuragis_slasher">카츠라기를 벤 나가마사</string>
    <string name="luxurious_sea_lord">진주를 문 해황</string>
    <string name="skyward_atlas">천공의 두루마리</string>
    <string name="lost_prayer_to_the_sacred_winds">사풍 원서</string>
    <string name="memory_of_dust">속세의 자물쇠</string>
    <string name="prototype_amber">황금 호박 프로토타입</string>
    <string name="mappa_mare">만국 항해용해도</string>
    <string name="solar_pearl">일월의 정수</string>
    <string name="royal_grimoire">왕실의 비전록</string>
    <string name="eye_of_perception">소심</string>
    <string name="the_widsith">음유시인의 악장</string>
    <string name="sacrificial_fragments">제례의 악장</string>
    <string name="favonius_codex">페보니우스 비전</string>
    <string name="blackcliff_agate">흑암 홍옥</string>
    <string name="frostbearer">인동의 열매</string>
    <string name="twin_nephrite">1급 보옥</string>
    <string name="emerald_orb">비취 오브</string>
    <string name="otherworldly_story">이세계 여행기</string>
    <string name="thrilling_tales_of_dragon_slayer">드래곤 슬레이어 영웅담</string>
    <string name="magic_guide">마도 서론</string>
    <string name="wine_and_song">뒷골목의 술과 시</string>
    <string name="everlasting_moonglow">불멸의 달빛</string>
    <string name="dodoco_tales">도도코 이야기집</string>
    <string name="white_dragon_ring">하쿠신의 고리</string>
    <string name="primordial_jade_winged_spear">화박연</string>
    <string name="skyward_spine">천공의 마루</string>
    <string name="vortex_vanquisher">관홍의 창</string>
    <string name="prototype_starglitter">별의 낫 프로토타입</string>
    <string name="crescent_pike">유월창</string>
    <string name="deathmatch">결투의 창</string>
    <string name="blackcliff_pole">흑암창</string>
    <string name="favonius_lance">페보니우스 장창</string>
    <string name="dragons_bane">용학살창</string>
    <string name="royal_spear">왕실의 장창</string>
    <string name="dragonspine_spear">용의 척추</string>
    <string name="black_tassel">흑술창</string>
    <string name="halberd">미늘창</string>
    <string name="white_tassel">백술창</string>
    <string name="lithic_spear">천암 장창</string>
    <string name="engulfing_lightning">예초의 번개</string>
    <string name="kitain_cross_spear">키타인 십자창</string>
    <string name="the_catch">「어획」</string>
    <string name="skyward_harp">천공의 날개</string>
    <string name="amoss_bow">아모스의 활</string>
    <string name="favonius_warbow">페보니우스 활</string>
    <string name="prototype_crescent">담월 프로토타입</string>
    <string name="compound_bow">강철궁</string>
    <string name="the_virdescent_hunt">청록의 사냥활</string>
    <string name="royal_bow">왕실의 장궁</string>
    <string name="rust">녹슨 활</string>
    <string name="sacrificial_bow">제례활</string>
    <string name="the_stringless">절현</string>
    <string name="blackcliff_warbow">흑암 배틀 보우</string>
    <string name="slingshot">탄궁</string>
    <string name="messenger">전령</string>
    <string name="recurve_bow">곡궁</string>
    <string name="sharpshooters_oath">신궁의 서약</string>
    <string name="raven_bow">까마귀깃 활</string>
    <string name="staff_of_homa">호마의 지팡이</string>
    <string name="elegy_for_the_end">종말 탄식의 노래</string>
    <string name="alley_hunter">뒷골목 사냥꾼</string>
    <string name="windblume_ode">바람 꽃의 노래</string>
    <string name="thundering_pulse">비뢰의 고동</string>
    <string name="mitternachts_waltz">유야의 왈츠</string>
    <string name="demon_slayer_bow">파마궁</string>
    <string name="predator">포식자</string>
    <string name="parametric_transformer">매개변수 변환기</string>
    <string name="farming_etc">기타</string>
    <string name="fish_mond">낚시 - 몬드</string>
    <string name="fish_liyue">낚시 - 리월</string>
    <string name="fish_inazuma">낚시 - 이나즈마</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="click_to_show_materials">클릭시 캐릭터 특성/돌파 재료 정보</string>
    <string name="daily_check_in">출석체크</string>
    <string name="purchase_ad_remove">광고제거버전 구매</string>
    <string name="ad_whether">광고 제거 여부 : X</string>
    <string name="removeads_or_donate">광고제거 및 후원</string>
    <string name="remove_ads">광고제거</string>
    <string name="donate_welkin_moon">개발자에게 공월축복 선물</string>
    <string name="donate_battle_pass">개발자에게 기행 선물</string>
    <string name="remove_ad_whether">광고제거 여부 : X</string>
    <string name="saved_theme">saved_theme</string>
    <string name="weekly_magatsu">마가츠 미타케 나루카미노 미코토</string>
    <string name="weekly_everlasting_lord">칠엽 적조의 비밀주</string>
    <string name="weekly_apep">아펩의 오아시스 파수꾼</string>
    <string name="haran_geppaku_futsu">하란 월백의 후츠</string>
    <string name="key_of_khaj_nisut">성현의 열쇠</string>
    <string name="light_of_foliar_incision">잎을 가르는 빛</string>
    <string name="xiphos_moonlight">크시포스의 달빛</string>
    <string name="cinnabar_spindle">진사의 방추</string>
    <string name="toukabou_shigure">꽃잎비</string>
    <string name="kagotsurube_isshin">카고츠루베 잇신</string>
    <string name="sapwood_blade">원목 검</string>
    <string name="polar_star">극지의 별</string>
    <string name="aqua_simulacra">약수</string>
    <string name="hunters_path">사냥꾼의 길</string>
    <string name="mouuns_moon">모운의 달</string>
    <string name="fading_twilight">노을</string>
    <string name="ibis_piercer">꿰뚫는 따오기 부리</string>
    <string name="end_of_the_line">매마른 연못</string>
    <string name="hamayumi">파마궁</string>
    <string name="kings_squire">왕의 측근</string>
</resources>