<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_centerInParent="true"
        android:background="#939597"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_margin="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_illganChecklist"
        android:textSize="11dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/illgansetting">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/commission"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_illganQuest"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanscjkkrdemilight"
            android:textSize="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:id="@+id/illgansettingtext"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="50dp"
            android:src="@drawable/trash_can_icon"
            android:id="@+id/illgandelete"
            android:clickable="true"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="30dp"
            android:src="@drawable/plus_icon"
            android:id="@+id/illganplus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/resinsetting">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/resin"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_resin"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanscjkkrdemilight"
            android:textSize="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:id="@+id/resinsettingtext"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="50dp"
            android:src="@drawable/trash_can_icon"
            android:id="@+id/resindelete"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="30dp"
            android:src="@drawable/plus_icon"
            android:id="@+id/resinplus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/artifactsetting">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/item"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_artifact"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanscjkkrdemilight"
            android:textSize="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:id="@+id/artifactsettingtext"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="50dp"
            android:src="@drawable/trash_can_icon"
            android:id="@+id/artifactdelete"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="30dp"
            android:src="@drawable/plus_icon"
            android:id="@+id/artifactplus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/talentsetting">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/talent"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_charTalent"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanscjkkrdemilight"
            android:textSize="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:id="@+id/talentsettingtext"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="50dp"
            android:src="@drawable/trash_can_icon"
            android:id="@+id/talentdelete"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="30dp"
            android:src="@drawable/plus_icon"
            android:id="@+id/talentplus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ascendsetting">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/icon_15_xiao"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_charAscend"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanscjkkrdemilight"
            android:textSize="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:id="@+id/ascendsettingtext"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="50dp"
            android:src="@drawable/trash_can_icon"
            android:id="@+id/ascenddelete"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="30dp"
            android:src="@drawable/plus_icon"
            android:id="@+id/ascendplus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/battlepasssetting">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/battle_pass_exp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_battlepass"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanscjkkrdemilight"
            android:textSize="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:id="@+id/battlepasssettingtext"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="50dp"
            android:src="@drawable/trash_can_icon"
            android:id="@+id/battlepassdelete"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="30dp"
            android:src="@drawable/plus_icon"
            android:id="@+id/battlepassplus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/enemysetting">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@drawable/chuchu"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_illganQuest"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanscjkkrdemilight"
            android:textSize="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:id="@+id/enemysettingtext"
            android:layout_marginLeft="8dp"

            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="50dp"
            android:src="@drawable/trash_can_icon"
            android:id="@+id/enemydelete"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="30dp"
            android:src="@drawable/plus_icon"
            android:id="@+id/enemyplus"/>
    </LinearLayout>

    <EditText
        android:id="@+id/daily_settings_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="체크리스트를 추가해보세요!"
        android:inputType="textPersonName" />
</LinearLayout>